[gd_scene load_steps=29 format=3 uid="uid://bai2j3wtxcewg"]

[ext_resource type="Script" path="res://Assets/Modules/Character/Strategies/AIBartenderStrategy.gd" id="1_84r86"]
[ext_resource type="Texture2D" uid="uid://bv1rqo5ynywwe" path="res://Assets/Textures/Stage/bar_bg.png" id="1_m2d7u"]
[ext_resource type="PackedScene" uid="uid://dgj8cpgw84mot" path="res://Assets/Modules/Decor/Assets/bar_table_1.tscn" id="2_i6yrx"]
[ext_resource type="Script" path="res://Assets/Modules/AIActions/Strategies/AIActionsStrategy.gd" id="2_kxqka"]
[ext_resource type="PackedScene" uid="uid://rwykpbf5e0h1" path="res://Assets/Modules/Decor/Assets/bar_table_2.tscn" id="3_ekcxf"]
[ext_resource type="PackedScene" uid="uid://d2cvdx2fgnnrh" path="res://Assets/Modules/Decor/Assets/bar_table_3.tscn" id="4_kkd0o"]
[ext_resource type="PackedScene" uid="uid://vetm76i3gabb" path="res://Assets/Modules/Decor/Assets/table_2.tscn" id="5_sv27g"]
[ext_resource type="PackedScene" uid="uid://1s5lb214um8w" path="res://Assets/Modules/Decor/Assets/table_4.tscn" id="6_x7u7b"]
[ext_resource type="PackedScene" uid="uid://b1k6aawlgctpw" path="res://Assets/Modules/Decor/Assets/table_3.tscn" id="7_p2yq3"]
[ext_resource type="PackedScene" uid="uid://sc7a05fqml2v" path="res://Assets/Modules/Decor/Assets/table.tscn" id="8_osxyu"]
[ext_resource type="PackedScene" uid="uid://jbr3yj0i2niu" path="res://Assets/Modules/Decor/Assets/cutting_table.tscn" id="9_ymbkp"]
[ext_resource type="PackedScene" uid="uid://b1bm8tdi3cpvr" path="res://Assets/Modules/Decor/Assets/mixing_table.tscn" id="10_gqnhm"]
[ext_resource type="PackedScene" uid="uid://niy2pgrlk6au" path="res://Assets/Modules/Decor/Assets/carbonizer_table.tscn" id="11_buo78"]
[ext_resource type="PackedScene" uid="uid://b23lgswlw3pf6" path="res://Assets/Modules/Decor/Assets/blender_table.tscn" id="12_whteg"]
[ext_resource type="PackedScene" uid="uid://dwkyhtlm1fk6v" path="res://Assets/Modules/Decor/Assets/ermge_fridge.tscn" id="13_t6uaw"]
[ext_resource type="PackedScene" uid="uid://okuxx8tg844m" path="res://Assets/Modules/Decor/Assets/apple_fridge.tscn" id="14_nx6jm"]
[ext_resource type="PackedScene" uid="uid://hc8xmft6lcol" path="res://Assets/Modules/Decor/Assets/fruits_basket.tscn" id="15_nl7q3"]
[ext_resource type="PackedScene" uid="uid://c166u1ttsx4ie" path="res://Assets/Modules/Decor/Assets/drink_bar.tscn" id="16_oqwmt"]
[ext_resource type="PackedScene" uid="uid://cuixbpasw8noj" path="res://Assets/Modules/Decor/Assets/recipe_book.tscn" id="17_6ne4a"]
[ext_resource type="PackedScene" uid="uid://dvx65gj4snp7s" path="res://Assets/Modules/Decor/Assets/safe_table.tscn" id="18_ij0xh"]
[ext_resource type="PackedScene" uid="uid://d35ycjrkrpbr1" path="res://Assets/Modules/Decor/Assets/trash_box.tscn" id="19_8wns5"]
[ext_resource type="Texture2D" uid="uid://ckq3g2dbrvxf2" path="res://Assets/Textures/Stage/big_table.png" id="20_58wyb"]
[ext_resource type="Texture2D" uid="uid://bogarw5h1vo7s" path="res://Assets/Textures/Stage/small_table.png" id="21_fer7p"]
[ext_resource type="Texture2D" uid="uid://bb5aewsmwvnnt" path="res://Assets/Textures/Stage/decor_closet.png" id="22_wqgul"]
[ext_resource type="Script" path="res://Assets/Modules/NPCs/Views/NpcSpawnerView.gd" id="23_h8hsu"]
[ext_resource type="PackedScene" uid="uid://bcklpy1idlhem" path="res://Assets/Modules/Character/Assets/ai.tscn" id="24_cwm7i"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_w8i1m"]
vertices = PackedVector2Array(359.031, -88, 359.977, 384, 200.117, 384, 104, 312, 104, 152, -945, -78.8203, -944.898, -88, -384, 152, -793.109, 8, 199.117, 512, -808.859, 512, -808.141, 432, -624, 432, -384, 440, -48, 440, -48, 312, -945, 8, -624, 152, -792.109, 152)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 0, 4, 7, 8), PackedInt32Array(9, 10, 11, 12, 13), PackedInt32Array(9, 14, 15, 3, 2), PackedInt32Array(8, 16, 5), PackedInt32Array(17, 18, 8), PackedInt32Array(17, 8, 7), PackedInt32Array(17, 7, 13, 12), PackedInt32Array(9, 13, 14)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-968, 544, -960, -168, 408, -168, 408, 544)])
agent_radius = 16.0

[sub_resource type="Curve2D" id="Curve2D_y5f8w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 656, 120.001, 0, 0, 0, 0, 96.0003, 200.001)
}
point_count = 2

[node name="WorkshopScene" type="Node2D"]
y_sort_enabled = true

[node name="_Strategies" type="Node" parent="."]

[node name="AIBartenderStrategy" type="Node" parent="_Strategies"]
script = ExtResource("1_84r86")
actionPositions = {
"interact with Blender": NodePath("../../Markers/Blender"),
"interact with Carbonizer": NodePath("../../Markers/Carbonizer"),
"interact with Cutting desk": NodePath("../../Markers/CuttingDesk"),
"interact with Mixer": NodePath("../../Markers/Mixer"),
"interact with Recipe book": NodePath("../../Markers/RecipeBook"),
"interact with Safe": NodePath("../../Markers/Safe"),
"interact with Table1": NodePath("../../Markers/Table1"),
"interact with Table2": NodePath("../../Markers/Table2"),
"interact with Table3": NodePath("../../Markers/Table3"),
"interact with Table4": NodePath("../../Markers/Table4"),
"interact with Trash can": NodePath("../../Markers/Trash"),
"pick up apple juice": NodePath("../../Markers/AppleJuice"),
"pick up banana": NodePath("../../Markers/Fruits"),
"pick up ermge juice": NodePath("../../Markers/ErmgeJuice"),
"pick up gin": NodePath("../../Markers/Closet"),
"pick up lemon": NodePath("../../Markers/Fruits"),
"pick up lime": NodePath("../../Markers/Fruits"),
"pick up rum": NodePath("../../Markers/Closet"),
"pick up tomato": NodePath("../../Markers/Fruits"),
"pick up tonic": NodePath("../../Markers/Closet"),
"pick up vodka": NodePath("../../Markers/Closet"),
"serve customer": NodePath("../../Markers/Customer")
}
levelObjects = {
"Blender": NodePath("../../Decor/Blender"),
"Carbonizer": NodePath("../../Decor/Carbonizer"),
"Customer": NodePath("../../Decor/BarTable2"),
"CuttingDesk": NodePath("../../Decor/Cutting desk"),
"Mixer": NodePath("../../Decor/Mixer"),
"Table1": NodePath("../../Decor/Table1"),
"Table2": NodePath("../../Decor/Table2"),
"Table3": NodePath("../../Decor/Table3"),
"Table4": NodePath("../../Decor/Table4"),
"Trash": NodePath("../../Decor/TrashBox")
}

[node name="AIActionsStrategy" type="Node" parent="_Strategies"]
script = ExtResource("2_kxqka")

[node name="Floor" type="Node2D" parent="."]
position = Vector2(0, -13)

[node name="Bg" type="Sprite2D" parent="Floor"]
position = Vector2(-0.159996, 0.0900097)
texture = ExtResource("1_m2d7u")

[node name="Markers" type="Node2D" parent="."]

[node name="Closet" type="Node2D" parent="Markers"]
position = Vector2(-576, -88)

[node name="Table1" type="Node2D" parent="Markers"]
position = Vector2(-424, -88)

[node name="CuttingDesk" type="Node2D" parent="Markers"]
position = Vector2(-296, -88)

[node name="Fruits" type="Node2D" parent="Markers"]
position = Vector2(-144, -88)

[node name="AppleJuice" type="Node2D" parent="Markers"]
position = Vector2(16, -88)

[node name="ErmgeJuice" type="Node2D" parent="Markers"]
position = Vector2(152, -88)

[node name="Table2" type="Node2D" parent="Markers"]
position = Vector2(288, -88)

[node name="Safe" type="Node2D" parent="Markers"]
position = Vector2(-776, 40)

[node name="Blender" type="Node2D" parent="Markers"]
position = Vector2(-344, 128)

[node name="RecipeBook" type="Node2D" parent="Markers"]
position = Vector2(-136, 120)

[node name="Mixer" type="Node2D" parent="Markers"]
position = Vector2(64, 120)

[node name="Customer" type="Node2D" parent="Markers"]
position = Vector2(360, 192)

[node name="Trash" type="Node2D" parent="Markers"]
position = Vector2(-800, 472)

[node name="Table3" type="Node2D" parent="Markers"]
position = Vector2(-328, 440)

[node name="Table4" type="Node2D" parent="Markers"]
position = Vector2(200, 416)

[node name="Carbonizer" type="Node2D" parent="Markers"]
position = Vector2(-48, 384)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_w8i1m")

[node name="Colliders" type="Node2D" parent="NavigationRegion2D"]

[node name="Borders" type="StaticBody2D" parent="NavigationRegion2D/Colliders"]
position = Vector2(-1, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NavigationRegion2D/Colliders/Borders"]
polygon = PackedVector2Array(-960, -104, 376, -104, 377, 392, 513, 392, 520, -168, 960, -168, 960, 528, 513, 528, 513, 400, 217, 400, 216, 528, -824, 528, -823, 416, -639, 416, -639, 168, -807, 168, -808, 24, -960, 24, -960, -88, -1088, -384, -1088, 576, 1024, 576, 1024, -640, -1088, -640, -1088, -408)

[node name="InnerTable" type="StaticBody2D" parent="NavigationRegion2D/Colliders"]
position = Vector2(-1, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NavigationRegion2D/Colliders/InnerTable"]
polygon = PackedVector2Array(-367, 168, -367, 424, -63, 424, -63, 296, 89, 296, 89, 168)

[node name="Decor" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="BarTable1" parent="Decor" instance=ExtResource("2_i6yrx")]
position = Vector2(453, 30)

[node name="BarTable2" parent="Decor" instance=ExtResource("3_ekcxf")]
position = Vector2(452, 185)

[node name="BarTable3" parent="Decor" instance=ExtResource("4_kkd0o")]
position = Vector2(454, 338)

[node name="Table1" parent="Decor" instance=ExtResource("7_p2yq3")]
position = Vector2(-428, -234)

[node name="Table2" parent="Decor" instance=ExtResource("8_osxyu")]
position = Vector2(287, -235)

[node name="Table3" parent="Decor" instance=ExtResource("5_sv27g")]
position = Vector2(-285, 297)

[node name="Table4" parent="Decor" instance=ExtResource("6_x7u7b")]
position = Vector2(318, 524)

[node name="Cutting desk" parent="Decor" instance=ExtResource("9_ymbkp")]
position = Vector2(-296, -198)

[node name="Mixer" parent="Decor" instance=ExtResource("10_gqnhm")]
position = Vector2(1, 196)

[node name="Carbonizer" parent="Decor" instance=ExtResource("11_buo78")]
y_sort_enabled = true
position = Vector2(-136, 315)

[node name="Blender" parent="Decor" instance=ExtResource("12_whteg")]
y_sort_enabled = true
position = Vector2(-280, 207)

[node name="ErmgeFridge" parent="Decor" instance=ExtResource("13_t6uaw")]
position = Vector2(150, -228)

[node name="AppleFridge" parent="Decor" instance=ExtResource("14_nx6jm")]
position = Vector2(15, -226)

[node name="FruitsBasket" parent="Decor" instance=ExtResource("15_nl7q3")]
position = Vector2(-142, -223)

[node name="DrinkBar" parent="Decor" instance=ExtResource("16_oqwmt")]
position = Vector2(-662, -142)

[node name="RecipeBook" parent="Decor" instance=ExtResource("17_6ne4a")]
y_sort_enabled = true
position = Vector2(-136, 196)

[node name="SafeTable" parent="Decor" instance=ExtResource("18_ij0xh")]
position = Vector2(-871, 89)

[node name="TrashBox" parent="Decor" instance=ExtResource("19_8wns5")]
position = Vector2(-869, 482)

[node name="BigTable" type="Sprite2D" parent="Decor"]
position = Vector2(-140, 194.61)
texture = ExtResource("20_58wyb")
offset = Vector2(0, 80)

[node name="SmallTable" type="Sprite2D" parent="Decor"]
position = Vector2(374, 449)
texture = ExtResource("21_fer7p")
offset = Vector2(0, -24)

[node name="DecorCloset" type="Sprite2D" parent="Decor"]
position = Vector2(-787, 336)
texture = ExtResource("22_wqgul")
offset = Vector2(0, -48)

[node name="Pathes" type="Node2D" parent="."]
z_index = 1
position = Vector2(608, -80)
rotation = 1.5708

[node name="Path2" type="Path2D" parent="Pathes"]
position = Vector2(88, 144)
rotation = -1.5708
curve = SubResource("Curve2D_y5f8w")

[node name="PathFollow2" type="PathFollow2D" parent="Pathes/Path2" node_paths=PackedStringArray("BarTable")]
position = Vector2(529.288, 138.103)
rotation = 1.5708
progress = 128.0
rotates = false
loop = false
script = ExtResource("23_h8hsu")
BarTable = NodePath("../../../Decor/BarTable2")

[node name="AIBartender" parent="." instance=ExtResource("24_cwm7i")]
position = Vector2(-224, 496)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -14)
offset = Vector2(0, 1)
